--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@ body {
 <body>
 <div class="w3-container">
 <h1>🔴SANTOS🔴</h1>
+<!---------------------FAIXA AZUL----------------------->  
+<a href="https://santos246.github.io/INICIO/" target="_self">
+<div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+2>INÍCIO</FONT></p></div></a>
+<!------------------------------------------------------>
 <div class="w3-panel w3-ios-pink">
 <h2>BEM VINDO</h2>
 <p>Tudo que voce precisa em um só lugar</p>
